[gd_scene load_steps=21 format=3 uid="uid://cdgml71f1mhl6"]

[ext_resource type="Script" path="res://scripts/ruins/tyson-body.gd" id="1_hviyl"]
[ext_resource type="Texture2D" uid="uid://cny78a3p7km4t" path="res://sprites/tyson/Tyson_Walking.png" id="2_hobn2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_72bev"]
atlas = ExtResource("2_hobn2")
region = Rect2(21, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7djt7"]
atlas = ExtResource("2_hobn2")
region = Rect2(42, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3fjv"]
atlas = ExtResource("2_hobn2")
region = Rect2(63, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_epi2y"]
atlas = ExtResource("2_hobn2")
region = Rect2(0, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xarj"]
atlas = ExtResource("2_hobn2")
region = Rect2(105, 32, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvg2h"]
atlas = ExtResource("2_hobn2")
region = Rect2(126, 32, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5eub3"]
atlas = ExtResource("2_hobn2")
region = Rect2(147, 32, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_py5g4"]
atlas = ExtResource("2_hobn2")
region = Rect2(84, 32, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3007o"]
atlas = ExtResource("2_hobn2")
region = Rect2(105, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfvy0"]
atlas = ExtResource("2_hobn2")
region = Rect2(126, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5gwu"]
atlas = ExtResource("2_hobn2")
region = Rect2(147, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsbh2"]
atlas = ExtResource("2_hobn2")
region = Rect2(84, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8swv"]
atlas = ExtResource("2_hobn2")
region = Rect2(21, 32, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_10go4"]
atlas = ExtResource("2_hobn2")
region = Rect2(42, 32, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsgft"]
atlas = ExtResource("2_hobn2")
region = Rect2(63, 32, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_di5ch"]
atlas = ExtResource("2_hobn2")
region = Rect2(0, 32, 21, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_bwgsl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_72bev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7djt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3fjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epi2y")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xarj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvg2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5eub3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_py5g4")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3007o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfvy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5gwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsbh2")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8swv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10go4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsgft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di5ch")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nphk1"]
size = Vector2(19, 12.5)

[node name="tyson-body" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_hviyl")

[node name="tyson-sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bwgsl")
animation = &"up"

[node name="tyson-collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 9.25)
shape = SubResource("RectangleShape2D_nphk1")
debug_color = Color(0.694118, 0.486275, 0.231373, 0.419608)

[node name="tyson_timer" type="Timer" parent="."]
wait_time = 26.897

[node name="TysonView" type="Camera2D" parent="."]
limit_smoothed = true

[node name="cutscene_timer" type="Timer" parent="."]

[connection signal="timeout" from="tyson_timer" to="." method="_on_tyson_timer_timeout"]
